Add policy: No AI generated initial application essays

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -203,7 +203,9 @@ Applicant Guide | Outreachy Documentation
 
 <p>Before you fill out the initial application, write answers to the four essay questions. Keep your answers in a personal document for future applications.</p>
 
-<p>The initial application includes four essay questions:</p>
+{% include 'home/snippet/no-generative-ai-essays.html' %}
+
+<p><b>The initial application includes four essay questions:</b></p>
 
 <ol>
 	<li><p><b>What country will you be living in from {{ current_round.internstarts|date:"F d, Y" }} to {{ current_round.internends|date:"F d, Y" }}?</b> If you will be living in multiple countries, list the country you will spend the most time in.</p></li>
