Add policy around AI generated contributions.
Outreachy strongly discourages usage of generative AI. Each Outreachy
mentor will set a policy for whether they accept contributions generated
by AI. Our applicant guide and internship guide now includes some basic
tips on how to use AI respectfully if the mentors allow it.

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -25,6 +25,7 @@ Applicant Guide | Outreachy Documentation
 <a href="#application-prep">Preparing for the contribution period</a><br>
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
+<a href='#generative-ai'>Policy on AI generated contributions</a><br>
 <a href="#contribution-evaluation">How are contributions evaluated?</a></br>
 <a href="#estimated-number-of-interns">Estimated number of interns</a><br>
 <a href='#final-application'>Final application</a><br>
@@ -459,6 +460,10 @@ When in doubt, ask the project mentor!
 It's good to ask for suggestions when looking for a suitable contribution.
 Make sure to describe what your skills are and what you want to learn more about.
 </p>
+
+<p id='generative-ai'><b>Policy on AI generated contributions</b></p>
+
+{% include 'home/snippet/generative-ai-policy.html' %}
 
 <p id='record-contributions'><b>Recording your contributions</b></p>
 
