--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -14,6 +14,7 @@ Internship Guide | Outreachy Documentation
 
 <ol>
 	<li><a href='#time-commitment'>Internship Time Commitment</a></li>
+	<li><a href='#generative-ai'>Generative AI policy</a></li>
 	<li><a href='#mentor-expectations'>Mentor Expectations</a></li>
 	<li><a href='#career-development'>Career Development</a></li>
 	<li><a href='#payments'>Payments</a></li>
@@ -48,6 +49,12 @@ Internship Guide | Outreachy Documentation
 <p>Internships can be extended for up to five weeks. Internships cannot be extended for more than 5 weeks. We cannot allow an internship to be stopped and then later restarted.</p>
 
 <p>When an internship is extended, the feedback dates and payment dates will be shifted by the amount of the internship extension.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+<h2 id='generative-ai'><a href='#generative-ai'>Generative AI policy</a></h2>
+
+{% include 'home/snippet/generative-ai-policy.html' %}
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
