remove section about asking questions on twitter

--- a/home/templates/home/blog/2025-08-25-initial-applications-open.html
+++ b/home/templates/home/blog/2025-08-25-initial-applications-open.html
@@ -9,7 +9,7 @@ Outreachy December 2025 internship applications
 {% load humanize %}
 
 
-<h1>Initial Applications Open for the December 2025 Outreachy Internship Round!</h1>
+<h1>Outreachy December 2025 internship applications</h1>
 
 <p><i>Date: August 25, 2025</i></p>
 
@@ -287,14 +287,9 @@ More projects will be added after the initial application deadline.
 
 <iframe title="Getting Ready for Outreachy Contribution Stage" src="https://diode.zone/videos/embed/1d54d72d-dd4a-426b-827f-000bec7ce81e?start=31s&amp;warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" width="560" height="315" frameborder="0"></iframe>
 
+<p>Our application process includes reflection questions that help us understand your background and barriers you may face in accessing opportunities in tech. Take your time, be honest, and don’t hesitate to contact us if you need support.</p>
+
 <hr>
-    
-<p>You can ask us questions about the Outreachy application through our <a href="https://www.twitter.com/outreachy">Twitter</a> or <a href="https://hachyderm.io/@outreachy">Mastodon</a> accounts. Make sure your questions on social media tag the Outreachy account, and use the hashtag #OutreachyChat.</p>
-
-<p>Example Twitter question: "Question? @outreachy #OutreachyChat"<BR>
-Example Mastodon question: "Question? @outreachy@hachyderm.io #OutreachyChat"</p>
-
-<p>Questions asked on Twitter, or Mastodon will be answered on the platform the question was asked on.</p>
 
 <h2 id='social-media'><a href='#social-media'>🤝🏾 Connect with Outreachy</a></h2>
 
