Add link to applicant announcement about no generative AI in initial application essays

--- a/home/templates/home/blog/2025-08-25-initial-applications-open.html
+++ b/home/templates/home/blog/2025-08-25-initial-applications-open.html
@@ -153,7 +153,7 @@ Submit an initial application even if you don't see a project that interests you
 <ul>
 	<li>There will be 1-3 fewer internships available this cohort, due to Outreachy's financial situation</li>
 	<li>Additional Outreachy program activities during the internship will be changed or cut, see details below</li>
-	<li>Outreachy has set a policy that <a href="{% url 'docs-applicant' %}#generative-ai">generative AI should not be used in initial applications</a></li>
+	<li>Outreachy has set a policy that <a href="{% url 'docs-applicant' %}#no-generative-ai-essays">generative AI should not be used in initial applications</a></li>
 	<li>Each Outreachy mentor will set <a href="{% url 'docs-applicant' %}#generative-ai">rules about whether they allow generative AI in project contributions</a></li>
 </ul>
    
