--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -200,11 +200,15 @@ Applicant Guide | Outreachy Documentation
 	<li>If you are a self-employed contractor: Find the average number of invoiced hours over the past six months</li>
 </ul>
 
-<h2 id='essay-questions'>Essay questions</h2>
+<h2 id='essay-questions'>Initial Application Essays</h2>
 
 <p>Before you fill out the initial application, write answers to the four essay questions. Keep your answers in a personal document for future applications.</p>
 
+<h3 id='no-generative-ai-essays'>No generative AI allowed for initial application essays</h3>
+<br>
 {% include 'home/snippet/no-generative-ai-essays.html' %}
+
+<h3 id='essay-questions'>Essay questions</h3>
 
 <p><b>The initial application includes four essay questions:</b></p>
 
