--- a/home/templates/home/blog/2025-08-25-initial-applications-open.html
+++ b/home/templates/home/blog/2025-08-25-initial-applications-open.html
@@ -28,6 +28,13 @@ Outreachy is seeking interns for the December to March 2025 internship cohort!
 	<li><a href='#important-dates'>Full Outreachy schedule</a></li>
 </ul>
 </p>
+<p>Outreachy has several changes this cohort:</p>
+<ul>
+	<li>There will be 1-3 fewer internships available this cohort, due to <a href="#note-on-outreachys-financial-situation">Outreachy's financial situation</a></li>
+	<li>Some Outreachy <a href="#program-activities-changes">program activities</a> during the internship will be changed or cut</li>
+	<li>Outreachy has set a policy that <a href="{% url 'docs-applicant' %}#no-generative-ai-essays">generative AI should not be used in initial applications</a></li>
+	<li>Each Outreachy mentor will set <a href="{% url 'docs-applicant' %}#generative-ai">rules about whether they allow generative AI in project contributions</a></li>
+</ul>
 
 <p>
 We <b>strongly</b> recommend you <a href="{% url 'docs-applicant' %}#essay-tips">read our tips for application essays</a> before submitting your initial application.
@@ -53,6 +60,7 @@ New to Outreachy? Start here:
 	<li><a href='#internship-projects'>💻 What internship projects do you have?</a></li>
 	<li><a href='#whats-different-this-round'>🔀 What’s Different This Round?</a></li>
 	<li><a href='#note-on-outreachys-financial-situation'>✏️ A Note on Outreachy’s Financial Situation</a></li>
+	<li><a href='#program-activities-changes'>🚧 Outreachy program activities changes</a></li>
 	<li><a href='#faq'>❓ Frequently asked questions (FAQ)</a>
 		<ul>
 			<li><a href='#non-student-eligibility'>👩🏾‍💻 Non-student eligibility policy</a></li>
@@ -164,7 +172,7 @@ Submit an initial application even if you don't see a project that interests you
 
 <p>As a result of our financial difficulties, Outreachy cannot fund as many interns as we did in the past. There will be 1-3 fewer interns accepted this cohort.</p>
 
-<p>To lower program costs, Outreachy is cutting some program activities during the internship period. Instead of having text-based internship chats every two weeks, we will have a video-based social hour three times during the internship. Instead of asking interns to write blog posts every two weeks, interns will be required to write a project report blog post three times during the internship. Outreachy is cutting back on activities that help interns find open source community members to have informal career chats with. We highly encourage interns to talk with their mentors to help them set up informal chats.</p>
+<p id='program-activities-changes'>To lower program costs, Outreachy is changing some program activities during the internship period. Instead of having text-based internship chats every two weeks, we will have a video-based social hour three times during the internship. Instead of asking interns to write blog posts every two weeks, interns will be required to write a project report blog post three times during the internship. Outreachy is cutting back on activities that help interns find open source community members to have informal career chats with. We highly encourage interns to talk with their mentors to help them set up informal chats.</p>
 
 <hr>
 <h3 id='why-you-should-still-apply'><a href='#why-you-should-still-apply'>Why You Should Still Apply</a></h3>
