Fix grammatical error
Remove `is` in `that's is` okay.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -192,7 +192,7 @@ Internship Guide | Outreachy Documentation
 
 <p>It can be tempting to use static site generators to create your own blog. However, interns often spend too much time configuring their blog than working on their project.</p>
 
-<p>Outreachy organizers do not recommend using proprietary social media blogs, such as Medium or Tumblr. If your community already has a blog on Medium and wants you to post progress reports to that blog, that's is okay. However, you will still need your own blog to publish other posts on.</p>
+<p>Outreachy organizers do not recommend using proprietary social media blogs, such as Medium or Tumblr. If your community already has a blog on Medium and wants you to post progress reports to that blog, that's okay. However, you will still need your own blog to publish other posts on.</p>
 
 <p>Please update your profile https://www.outreachy.org/account/ with a link to both the URL for your blog, and the RSS feed for your blog. For the RSS feed, you can specify either the entire blog feed, or a specific feed you want to be aggregated. Some interns add the RSS feed for their "outreachy" tag on their blog, so they can also blog about personal things.</p>
 
